Adds basic rule-manager subproject